Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Draw all diagrams by jayangshu84</title>
+    <title>Online Diagram Software by jayangshu84</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Draw all diagrams</h1>
-        <p>Fork of draw.io</p>
+        <h1>Online Diagram Software</h1>
+        <p>jayangshu84.github.io/draw.io/war/index.html</p>
 
         <p class="view"><a href="https://github.com/jayangshu84/draw.io">View the Project on GitHub <small>jayangshu84/draw.io</small></a></p>
 
@@ -29,6 +29,11 @@
       </header>
       <section>
         <h2>
+<a id="start-drawing" class="anchor" href="#start-drawing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Start Drawing</h2>
+
+<p><a href="jayangshu84.github.io/draw.io/war/index.html">jayangshu84.github.io/draw.io</a></p>
+
+<h2>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h2>
 
 <p><a href="https://www.draw.io">draw.io</a> is an online diagramming web site that delivers the source in this project.</p>
