--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>
 <a id="start-drawing" class="anchor" href="#start-drawing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Start Drawing</h2>
 
-<p><a href="https://jayangshu84.github.io/draw.io/war/index.html">https://jayangshu84.github.io/draw.io/war/index.html</a></p>
+<p><a href="https://jayangshu84.github.io/draw.io/war/index.html">draw.io @ jsaha's github page</a></p>
 
 <h2>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h2>
